# TinyBFT

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  flake.nix
examples/: CMakeLists.txt  simple_client.cc  simple_replica.cc
include/: Modify.h  State_defs.h  libbyz.h  types.h
src/: Array.h  Array.t  Big_req_table.cc  Big_req_table.h  Bitmap.h  Certificate.h  Certificate.t  Checkpoint.cc  Checkpoint.h  Checkpoint_rec.cc  Checkpoint_rec.h  Client.cc  Client.h  Commit.cc  Commit.h  Cycle_counter.h  Data.cc  Data.h  Digest.cc  Digest.h  Fetch.cc  Fetch.h  ITimer.cc  ITimer.h  K_max.h  Log.h  Log.t  Log_allocator.cc  Log_allocator.h  MD5.h  Makefile  Message.cc  Message.h  Message_tags.h  Meta_data.cc  Meta_data.h  Meta_data_cert.cc  Meta_data_cert.h  Meta_data_d.cc  Meta_data_d.h  (+111 more)
test/: dsum_test.cc  trivial_state_test.cc
test_runtime/: test.conf  test_mbedtls  test_mbedtls.cc
